# fiddler-examples

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
api-examples/: README.md
api-examples/publishing/: README.md
cookbooks/: Fiddler_Cookbook_Custom_Judge_Evaluators.ipynb  Fiddler_Cookbook_RAG_Experiments_at_Scale.ipynb
fiddler_utils/: README.md  __init__.py  alert_profiles.py  bulk_alerts.py  comparison.py  connection.py  exceptions.py  fql.py  iteration.py  projects.py  reporting.py  schema.py  testing.py
fiddler_utils/assets/: __init__.py  alerts.py  base.py  baselines.py  charts.py  dashboards.py  feature_impact.py  ingestion.py  metrics.py  models.py  references.py  segments.py
fiddler_utils/examples/: asset_export_import.py  baseline_operations.py  bulk_alert_creation.py  chart_operations.py  dashboard_operations.py  environment_reporting.py  fql_utilities.py  model_comparison.py  model_export_import.py
fiddler_utils/tests/: __init__.py  conftest.py  test_alert_profiles.py  test_bulk_alerts.py  test_comparison.py  test_config.ini.template  test_fql.py  test_integration.py  test_models.py  test_references.py  test_schema.py  test_testing.py
fiddler_utils/work-dir_bulk-alert-creation-util/: FUTURE.md  OPERATIONS.md  PRD.md  README.md  temp-customer_feedback.md
integration-examples/bigquery/: Fiddler-BigQuery Integration - Add Model.ipynb  Fiddler-BigQuery Integration - Event Publishing.ipynb
integration-examples/sagemaker/: FiddlerSageMakerDemo.ipynb  README.md
integration-examples/snowflake/: Fiddler-Snowflake Integration - Add Model.ipynb  Fiddler-Snowflake Integration - Event Publishing.ipynb
misc-utils/: 20newsgroups_prep_vectorization.ipynb  README.md  adding_charts.ipynb  alert_bulk_modification.ipynb  alerts_gen_testing.ipynb  check_schema_spec.py  compare_models.ipynb  copying_a_dashboard.ipynb  copying_a_dashboard_with_custom_order.ipynb  copying_segments.ipynb  create_dashboard_from_saved_charts.ipynb  env_stats.ipynb  export_import_model_assets.ipynb  export_import_models.ipynb  feature_importance_reupload.ipynb  fetch_performance_metrics.ipynb  fql_utilities_demo.ipynb  get_column_name_id_mapping.py  ingest_dataframe_traces.ipynb  replace_alerts_with_mods.py  user_invite_automation.ipynb
quickstart/: Fiddler_Quickstart_Add_Model_Artifact.ipynb  Fiddler_Quickstart_DIY.ipynb  Fiddler_Quickstart_Guide.ipynb  Fiddler_Quickstart_IMDB_Onboarding.ipynb  Fiddler_Quickstart_Image_Monitoring.ipynb  Fiddler_Quickstart_Imbalanced_Data.ipynb  Fiddler_Quickstart_Intersectionally_Unfair.ipynb  Fiddler_Quickstart_NLP_Monitoring.ipynb  Fiddler_Quickstart_NLP_OpenAI_Monitoring.ipynb  Fiddler_Quickstart_NLP_multiclass.ipynb  Fiddler_Quickstart_Ranking_Model.ipynb  Fiddler_Quickstart_Simple_Monitoring.ipynb  Fiddler_Quickstart_Surrogate_XAI.ipynb  resnet18_cifar10_epoch5.pth
quickstart/.ipynb_checkpoints/: Fiddler_Newsgroups_DataGeneration-checkpoint.ipynb  Fiddler_Quickstart_DIY-checkpoint.ipynb  Fiddler_Quickstart_Image_Monitoring-checkpoint.ipynb  Fiddler_Quickstart_Imbalanced_Data-checkpoint.ipynb  Fiddler_Quickstart_NLP_Monitoring-checkpoint.ipynb  Fiddler_Quickstart_NLP_multiclass-checkpoint.ipynb  Fiddler_Quickstart_Surrogate_XAI-checkpoint.ipynb
quickstart/23.4/: Fiddler_Newsgroups_DataGeneration.ipynb  Fiddler_Quickstart_Image_Monitoring.ipynb  Fiddler_Quickstart_Imbalanced_Data.ipynb  Fiddler_Quickstart_NLP_Monitoring.ipynb  Fiddler_Quickstart_NLP_OpenAI_Monitoring.ipynb  Fiddler_Quickstart_NLP_multiclass.ipynb  Fiddler_Quickstart_Ranking_Model.ipynb
quickstart/23.5/: Fiddler_Quickstart_DIY.ipynb  Fiddler_Quickstart_IMDB_Onboarding.ipynb  Fiddler_Quickstart_Image_Monitoring.ipynb  Fiddler_Quickstart_Imbalanced_Data.ipynb  Fiddler_Quickstart_Intersectionally_Unfair.ipynb  Fiddler_Quickstart_NLP_Monitoring.ipynb  Fiddler_Quickstart_NLP_OpenAI_Monitoring.ipynb  Fiddler_Quickstart_NLP_multiclass.ipynb  Fiddler_Quickstart_Ranking_Model.ipynb  Fiddler_Quickstart_Simple_Monitoring.ipynb  Fiddler_Quickstart_Surrogate_XAI.ipynb
quickstart/23.6/: Fiddler_Quickstart_IMDB_Onboarding.ipynb  Fiddler_Quickstart_Image_Monitoring.ipynb  Fiddler_Quickstart_NLP_Monitoring.ipynb  Fiddler_Quickstart_NLP_OpenAI_Monitoring.ipynb  Fiddler_Quickstart_NLP_multiclass.ipynb  Fiddler_Quickstart_Ranking_Model.ipynb  Fiddler_Quickstart_Surrogate_XAI.ipynb
quickstart/23.7/: Fiddler_Newsgroups_DataGeneration.ipynb  Fiddler_Quickstart_Add_Model_Artifact.ipynb  Fiddler_Quickstart_IMDB_Onboarding.ipynb  (+5 more)
(+182 files in other folders)
