[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiddler-utils"
dynamic = ["version"]
description = "Admin automation library for Fiddler administrative tasks"
readme = "fiddler_utils/README.md"
license = {text = "MIT"}
authors = [
    {name = "Fiddler AI", email = "support@fiddler.ai"}
]
requires-python = ">=3.10"
keywords = ["fiddler", "ml-ops", "monitoring", "admin", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fiddler-client>=3.10.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/fiddler-labs/fiddler-examples"
Documentation = "https://github.com/fiddler-labs/fiddler-examples/tree/main/fiddler_utils"
Repository = "https://github.com/fiddler-labs/fiddler-examples"
Issues = "https://github.com/fiddler-labs/fiddler-examples/issues"

[tool.setuptools.dynamic]
version = {attr = "fiddler_utils.__version__"}

[tool.setuptools.packages.find]
include = ["fiddler_utils*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
fiddler_utils = ["py.typed", "README.md"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["fiddler_utils/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=fiddler_utils",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    # TODO: Increase coverage and re-enable threshold
    # "--cov-fail-under=70",
]
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests requiring Fiddler connection",
    "slow: Tests that take a long time to run",
]

# MyPy type checking configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fiddler_utils.tests.*"
ignore_errors = true

# Black code formatting
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff linting configuration
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # Do not perform function calls in argument defaults
    "C901",  # Function is too complex
    "N802",  # Function name should be lowercase (allow CamelCase for class methods)
    "N803",  # Argument name should be lowercase
    "N806",  # Variable in function should be lowercase
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused imports in __init__
"tests/**/*.py" = ["S101"]  # Allow assert in tests

# Coverage configuration
[tool.coverage.run]
source = ["fiddler_utils"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
